Restore index.html content
Restored the original content of index.html after a previous removal.

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 <li>
   <details>
        <h2 class="visually-hidden">FTTH Survey & AutoCAD GPON Design in Ghana | Civil-to-Cable Distance Automation Tool</h2>
-    <summary>MTN GPON Technical Survey & Network Design - GESL (2025)</summary>
+    <summary>MTN GPON Technical Survey & Network Design - GESL (2025-2026)</summary>
     <p>Conducted Fibre-To-The-Home survey, led an AutoCAD network design team, and developed a 
       <a href="https://github.com/oswaldamoah/civiltocable" target="_blank" rel="noopener noreferrer">civil-to-cable distance automation tool</a> 
       to streamline broadband expansion for MTN’s GPON Project with GESL.
@@ -411,6 +411,7 @@
 </script>
 </body>
 </html>
+
 
 
 
